--- a/styles/_responsive-tablet.scss
+++ b/styles/_responsive-tablet.scss
@@ -95,6 +95,10 @@
 
     #profile{
 
+        .past-edu{
+            margin-top: 10%;
+        }
+
         .pfp{
 
             margin: 0 6% 0;
@@ -160,20 +164,16 @@
             .landing{
                 .landing-contents{
                     padding-top: 40%;
+                    font-size: 2rem;
                 }
             }
-
 
             .welcome{
-
-                padding: 2em 5em;
-                margin-bottom: 5%;
-                h4{
-                    font-size: 2.9em;
-                }
-                
-
+                font-size: 1rem;
             }
+
+
+        
 
         }
 
@@ -251,10 +251,14 @@
 
                 img{
                     height: 30vh;
+                    padding: 2%;
                 }
 
                 .centered{
                     font-size: 0.7em;
+                    p{
+                        font-size: 1.75rem;
+                    }
                 }
         
         
@@ -408,9 +412,7 @@
     .skills{
 
 
-        h4{
-            color: $feature;
-        }
+        
         
 
 
