--- a/styles/_responsive-desktop.scss
+++ b/styles/_responsive-desktop.scss
@@ -246,6 +246,10 @@
             flex-direction: row;
             font-size: 1vw;
             font-family: raleway;
+
+            #desktop-logo{
+                display: block;
+            }
             
 
             a{
@@ -255,7 +259,7 @@
                
             }
             li{
-                padding-top: 0.5%;
+                padding-top: 1%;
 
 
                 
@@ -271,7 +275,7 @@
             }
 
             .logo-li{
-                padding-top: 0.25%;
+                padding-top: 0.6%;
 
             }
 
