--- a/styles/_menu.scss
+++ b/styles/_menu.scss
@@ -20,6 +20,14 @@
         height: 8%;
         width: 100%;
 
+        .logo-txt-mobile{
+            font-family: lust-script;
+            font-size: 1.5em;
+            padding: 1.5% 3%;
+            position: absolute;
+            top: 1%;
+        }
+
         
         img{
             height: 4%;
@@ -87,8 +95,11 @@
         list-style-type: none;
         display: none;
         position: absolute;
-        top: 10%;
         width: 100%;
+
+        #desktop-logo{
+            display: none;
+        }
 
 
         height: 100%;
