--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -73,37 +73,50 @@
                 display: none;
             }
 
-            a{
-                text-decoration: none;
-                color: $feature;
-                font-family: 'raleway', sans-serif;
-                font-size: 1em;    
+
+
+               
                 
-                li{
-                    border: 1px solid black;
-                    list-style-type: none;
-                    // width: 100;
-                    background-color: white;
+            li{
+                border: 1px solid black;
+                list-style-type: none;
+                // width: 100;
+                background-color: white;
+                
+                margin: 5% 0;
+                box-shadow: 0.5em 0.5em 0 0 $feature;
+
+                a{
+                    text-decoration: none;
+                    color: $feature;
+                    font-family: 'raleway', sans-serif;
+                    font-size: 1em; 
+                    flex-grow: 1;
                     padding: 0.65em;
-                    margin: 5% 0;
-                    box-shadow: 0.5em 0.5em 0 0 $feature;
-                     
+                
+                    width: 100%;
+                    height: 100%;
+                    display: block;
                     
-                    
+                
                 }
                 &:hover{
-                    li{
-                        background-color: $feature;
+                    background-color: $feature;
+                    box-shadow: 0.5em 0.5em 0 0 black;
+
+                    a{
+                        color: white;
                     }
                     
                     
-                    color: white;
                     
                 }
+                    
+                
+                
             }
             
-            
-        
-            
-    }   }
+     
+        }   
+    }
 }
