--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -2,7 +2,7 @@
     position: absolute;
     top: 5%;
     width: 100%;
-    z-index: -1;
+    // z-index: -1;
     display: flex;
     flex-direction: column;
 
@@ -49,7 +49,7 @@
     .resume{
         text-align: center;
         margin: 6% 0 8%;
-        z-index: 999;
+        z-index: 1;
     }
 
     ol{
