--- a/styles/style.css
+++ b/styles/style.css
@@ -213,6 +213,9 @@ p {
   padding: 1.5% 10%;
   -webkit-box-shadow: 0.25em 0.25em 0 0;
           box-shadow: 0.25em 0.25em 0 0;
+  z-index: 99;
+  cursor: pointer;
+  position: relative;
 }
 
 #profile .resume-link:hover {
@@ -229,7 +232,6 @@ p {
 #profile .resume {
   text-align: center;
   margin: 6% 0 8%;
-  z-index: 1;
 }
 
 #profile ol {
