--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -34,7 +34,7 @@
         border: 2px solid $feature;
         padding: 1.5% 10%;
         box-shadow: 0.25em 0.25em 0 0;
-        z-index: 99;
+        
         cursor: pointer;
         position: relative;
 
@@ -53,6 +53,8 @@
 
         text-align: center;
         margin: 6% 0 8%;
+        position: relative;
+        z-index: 99;
         
         
 
