--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -6,14 +6,15 @@
 footer{
     background: rgba(255, 255, 255, 0.8);
     position: fixed;
+    z-index: 999;
     bottom: 0;
     width: 100%;
     height: 8%;
 
-    .fab{
-        z-index: 99;
-        position: relative;
-    }
+    // .fab{
+    //     // z-index: 99;
+    //     position: relative;
+    // }
 
     
 
@@ -45,6 +46,8 @@ footer{
                 font-size: 0.75em;
                 color: black;
                 &:hover{color:$feature}
+                z-index: 999;
+                position: relative;
             }
             
         } 
