--- a/styles/_menu.scss
+++ b/styles/_menu.scss
@@ -2,7 +2,7 @@
 
 .mobile-container{
     height: 20%;
-    position: fixed;
+    position: sticky;
     top: 0;
     z-index: 99;
     font-family: 'raleway', sans-serif;
