--- a/styles/style.css
+++ b/styles/style.css
@@ -53,7 +53,8 @@ p {
 
 .mobile-container {
   height: 20%;
-  position: fixed;
+  position: -webkit-sticky;
+  position: sticky;
   top: 0;
   z-index: 99;
   font-family: 'raleway', sans-serif;
