--- a/src/styles/Styles.scss
+++ b/src/styles/Styles.scss
@@ -139,6 +139,10 @@
 
     .fa-eye, i{
         font-size: 1.5rem;
+        cursor: pointer;
+        &:hover{
+            color: $green;
+        }
     }
 }
 
@@ -155,7 +159,14 @@
             text-decoration: none;
             font-size: 12vw;
             font-weight: 800;
-            padding-bottom: 10%; 
+            padding-bottom: 10%;
+            -webkit-transition: all .5s ease;
+            -moz-transition: all .5s ease;
+            transition: all .5s ease;
+
+            &:hover{
+                font-size: 4rem;
+            } 
         }
         
     }
@@ -227,10 +238,12 @@
             display: flex;
             flex-direction: row;
             padding-top: 5%;
+            
 
         }
 
         .timelineYears{
+            
             
             .yearItem{
                 min-height: 15vh;
@@ -239,12 +252,20 @@
                 align-items: center;
                 justify-content: space-between;
                 width: 20vw;
+                
+                &:hover{
+                    transition: transform .5s ease;
+
+                    
+                    transform: scale(1.5);
+                }
 
                 .line{
                     min-width: 10vw;
                     background-color: $green;
                     border: none;
                     height: 1vh;
+                    
                 }
                 
                 h2{
@@ -253,6 +274,10 @@
 
                 }
             }
+        }
+        .timelineItem:hover{
+            transition: transform .5s ease;
+            transform: scale(1.5);
         }
 
 
@@ -268,6 +293,16 @@
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
+                transition: transform .5s ease;
+                
+                    &:hover{
+                        .yearItem{
+                            transition: transform .5s ease;
+                            transform: scale(1.5);  
+                        }
+                        
+                        transform: scale(1.5);
+                    }
 
                 h2{
                     padding-bottom: 3%;
@@ -290,19 +325,73 @@
             justify-content: space-between;
             margin-top: 5%;
 
+            .tooltip{
+                width: 26%;
+                min-height: 10vh;
+                padding: 1%;
+                display: flex;
+                flex-direction: column-reverse;
+                justify-content: space-between;
+                align-content: center;
 
-            img{
-                padding: 2%;
-                width: 21%;
                 margin-bottom: 10%;
                 transition: transform .5s ease;
+                text-align: center;
+
+
+
+
+
+
+
+
+                // .tooltiptext{
+                //     display: none;
+                //     padding: 5%;
+                //     z-index: 1;
+                //     font-size: 0.65rem;
+                //     // background-color: rgba(47, 202, 176, 0.5);
+                //     transition: transform .5s ease;
+                //     margin-top: 30%;
+                //     text-align: center;
+                //     width: 100%;
+
+
+                    
+
+                // }
+            }
+            // .tooltip:hover .tooltiptext{
+            //     display: flex;
+
+            //     text-align: center;
+            //     transform: scale(1.5);
+
+
                 
-                &:hover{
-                    transform: scale(1.5);
+                
 
-                    filter: invert(73%) sepia(48%) saturate(602%) hue-rotate(115deg) brightness(85%) contrast(92%);
+            // }
 
-                }
+            .tooltip:hover img{
+                transform: scale(1.5);
+
+                filter: invert(73%) sepia(48%) saturate(602%) hue-rotate(115deg) brightness(85%) contrast(92%);
+
+            }
+
+
+
+            img{
+                padding: 5%;
+                transition: transform .5s ease;
+                
+                // &:hover{
+                //     transform: scale(1.5);
+
+                //     filter: invert(73%) sepia(48%) saturate(602%) hue-rotate(115deg) brightness(85%) contrast(92%);
+
+                // }
             }
         }
     }
@@ -417,6 +506,15 @@
         margin-bottom: 5%;
         a{
             color: #000;
+            transition: transform .5s ease;
+                
+                &:hover{
+                    transform: scale(1.5);
+
+                    filter: invert(73%) sepia(48%) saturate(602%) hue-rotate(115deg) brightness(85%) contrast(92%);
+
+                }
+
 
         }
     }
@@ -428,6 +526,7 @@
             padding: 2% 5%;
             width: 100%;
             margin-bottom: 20%;
+            cursor: pointer;
             &:hover{
                 color: #fff;
                 background-color: $green;
