--- a/src/styles/Tablet.css
+++ b/src/styles/Tablet.css
@@ -105,7 +105,7 @@
   .aboutPage .learningPath .timeline .timelineItem p {
     font-size: 1.5rem;
   }
-  .aboutPage .skillsSection .skillsIcons img {
+  .aboutPage .skillsSection .skillsIcons .tooltip {
     width: 18%;
   }
   .projectsPage .projectGallery {
@@ -183,6 +183,9 @@
   }
   .designPage .graphicCards .portfolioCard .cardDetails .sub {
     font-size: 3.5vw;
+  }
+  .wrapperStyles .heading h1 {
+    font-size: 8vw;
   }
 }
 /*# sourceMappingURL=Tablet.css.map */
